--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round" class="feather feather-download">
                         <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-                        <polyline points="7 10 12 15 17 10"></polyline>
+                        <polyline points="7 10 12 15 17 10"></polyline>W
                         <line x1="12" y1="15" x2="12" y2="3"></line>
                     </svg></button>
             </div>
