--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
 <body>
     <div class="container-fluid">
 
-        <div class="row top-row " style="margin-top: 40px;">
-            <div class="col-12 blue">
+        <div class="blue row top-row" style="margin-top: 40px;">
+            <div class=" col-12 col-md-6 mb-4 mb-md-0 text-center text-md-left">
                 <a href="index.html">Suman Lama</a>
             </div>
-            <div class="col-6 pink btn-c">
-                <button type="button"><a href="works.html">Works</a></button></div>
-            <div class="col-6 pink btn-c">
-                <button type="button"><a href="contact.html">Contact</a></button></div>
+            <div class="col-12 col-md-6">
+                <div class="row justify-content-around">
+                    <div class="pink btn-c">
+                        <button type="button"><a href="works.html">Works</a></button></div>
+                    <div class="pink btn-c">
+                        <button type="button"><a href="contact.html">Contact</a></button></div>
+                </div>
+            </div>
         </div>
 
         <div class="text-center" style="margin-top: 50px;">
@@ -75,9 +79,8 @@
             </div>
             <div class="row m-top-40 z-ind btn-c justify-content-around" style="padding: 0 20px; width: 100%;">
                 <div class="col text-center" style="padding: 0;">
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink" width="86" height="85" viewBox="0 0 86 85"
-                        class="z-ind">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="86"
+                        height="85" viewBox="0 0 86 85" class="z-ind">
                         <defs>
                             <style>
                                 .cls-1 {
@@ -158,7 +161,8 @@
             <h2 class="z-ind col-12 m-top-40 no-m-btm secondary-c">Contact me:</h2>
 
             <h3 class="z-ind col-8  no-m-btm secondary-c" style="margin-top:25px;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="40" viewBox="0 0 26 36" style="margin-right:10px;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="40" viewBox="0 0 26 36"
+                    style="margin-right:10px;">
                     <defs>
                         <style>
                             .a {
