--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="/fonts/Roboto/stylesheet.css">
+    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../fonts/Roboto/stylesheet.css">
 </head>
 
 <body>
