--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,11 @@
     <meta name="description" content="I am a multi-disciplinary media designer">
 
     <!-- CUSTOM CSS -->
-    <link rel="preload" href="main.css" as="style">
-    <link rel="stylesheet" href="main.css">
+    <link rel="preload" href="main.css" as="style" type="text/css">
+    <link rel="stylesheet" href="main.css" type="text/css">
     <!-- BOOTSTRAP CSS -->
-    <link rel="stylesheet" href=".../node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://github.com/sumnjlama/portfolio/blob/master/node_modules/bootstrap/dist/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href=".../node_modules/bootstrap/dist/css/bootstrap.css" type="text/css">
     <!-- CUSTOM FONT: ROBOTO -->
     <link rel="stylesheet" href="fonts/Roboto/stylesheet.css">
 
