--- a/works.html
+++ b/works.html
@@ -15,7 +15,8 @@
     <link rel="preload" href="main.css" as="style">
     <link rel="stylesheet" href="main.css">
     <!-- BOOTSTRAP CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://github.com/sumnjlama/portfolio/blob/master/node_modules/bootstrap/dist/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href=".../node_modules/bootstrap/dist/css/bootstrap.css" type="text/css">
     <!-- CUSTOM FONT: ROBOTO -->
     <link rel="stylesheet" href="fonts/Roboto/stylesheet.css">
 
