--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="main.css" type="text/css">
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://github.com/sumnjlama/portfolio/blob/master/node_modules/bootstrap/dist/css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href=".../node_modules/bootstrap/dist/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" type="text/css">
     <!-- CUSTOM FONT: ROBOTO -->
     <link rel="stylesheet" href="fonts/Roboto/stylesheet.css">
 
