hope for the best

--- a/works.html
+++ b/works.html
@@ -87,7 +87,7 @@
                     <span class="card-img-overlay hide">
                         <p class="work-titles">Triple Booster Plus</p>
                         <p>Branding design for a health supplement capsules from JHR nature cure.</p>
-                        <a class="work-link-btn" href="index.html">See more</a>
+                        <a class="work-link-btn" onclick="openSite4()">See more</a>
                     </span>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                     <span class="card-img-overlay hide">
                         <p class="work-titles">Raw Gold</p>
                         <p>Branding design for an organic protein powder from JHR nature cure.</p>
-                        <a class="work-link-btn" href="index.html">See more</a>
+                        <a class="work-link-btn" onclick="openSite5()">See more</a>
                     </span>
                 </div>
             </div>
